# pruvagraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  extension.js  package-lock.json  package.json  pruvalex-pruvagraph-1.1.0.vsix  pruvalex-pruvagraph-1.2.0.vsix
.github/workflows/: ci.yml
pruvagraph-out/: GRAPH_REPORT.md  community_summaries.json  cost_report.json  graph.html  graph.json  hierarchy.json  importance_scores.json  last_diff.json  reputation.json
pruvagraph-out/cache/: stat-index.json
python/: CLAUDE.md  README.md  pyproject.toml
python/pruvagraph/: __init__.py  __main__.py  batch.py  benchmark.py  build.py  cli.py  cluster.py  export.py  graph_diff.py  hooks.py  impact_analyzer.py  installer.py  llm_extract.py  mcp_server.py  monorepo.py  pipeline.py  prewarm.py  query.py  session_tracker.py  streaming.py  subgraph.py  watch.py
python/tests/: conftest.py  test_build.py  test_dead_layers.py  test_dedup.py  test_detect.py  test_deterministic_router.py  test_export.py  test_package.py  test_prewarm.py  test_streaming.py
src/: cli-runner.js  commands.js  dashboard.js  sidebar-html.js
