[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pruvagraph"
version = "1.1.0"
description = "Codebase knowledge graphs with 99%+ LLM cost reduction — by PRUVALEX"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["knowledge-graph", "llm", "cost-reduction", "code-analysis", "mcp", "claude", "cursor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "networkx>=3.3",
    "datasketch>=1.6",
    "click>=8.1",
    "rich>=13.7",
    "mcp>=1.3",
    "watchdog>=4.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
tree-sitter = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-java>=0.23",
]
graph   = ["leidenalg>=0.10", "igraph>=0.11"]
office  = ["python-docx>=1.1", "openpyxl>=3.1"]
ollama  = ["ollama>=0.3"]
docs    = ["pypdf>=4.0", "python-docx>=1.1"]          # N1 free doc parser
embed   = ["fastembed>=0.2", "numpy>=1.26"]            # A1 local embeddings
yaml    = ["pyyaml>=6.0"]                              # N5 YAML config parser
all     = ["pruvagraph[tree-sitter,graph,office,ollama,docs,embed,yaml]"]
dev     = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
pruvagraph = "pruvagraph.cli:main"

[project.urls]
Homepage = "https://github.com/pruvalex/pruvagraph"
Repository = "https://github.com/pruvalex/pruvagraph"
Issues = "https://github.com/pruvalex/pruvagraph/issues"

[tool.hatch.build.targets.wheel]
packages = ["pruvagraph"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E741",   # ambiguous variable name (l, O, I) — cosmetic only
    "F841",   # local variable assigned but never used — intentional unpacking
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
